--- a/nimbus/wizard/templates/generic.html
+++ b/nimbus/wizard/templates/generic.html
@@ -1,23 +1,14 @@
 {% extends "base_wizard.html" %}
 
-{% if page_name == 'timezone' %}
 {% block headtags %}
+<script type="text/javascript" src="/media/js/offsite.js"></script>
 <script type="text/javascript">
 
     $(document).ready(function() {
         $("select#id_country").bind("change", getAreaChoices);
-        
-        $('#offsite_form #id_active').change(function(){
-            input_active = $('#offsite_form #id_active');
-            ps = input_active.parents().filter('p').siblings().filter(':not(p:last)');
-            if (input_active.attr('checked')) {
-                ps.slideDown();
-            } else {
-                ps.slideUp();
-            }
-        }).change();
+
     });
- 
+
     function getAreaChoices() {
         $.ajax({
             type: "POST",
@@ -42,12 +33,11 @@
 
 </script>
 {% endblock %}
-{% endif %}
 
 {% block content %}
 
     <form action="" method="post" id="{{page_name}}_form">
-        
+
         {% include "form.html" %}
 
         <p class="input_submit">
@@ -56,7 +46,7 @@
             {% endif %}
             <input type="submit" class="submit right no_margin" value="Próximo" />
         </p>
-               
+
         <input type="hidden" name="next" value="{{ next }}" />
 
     </form>
