--- a/nimbus/recovery/templates/recovery_instancenameerror.html
+++ b/nimbus/recovery/templates/recovery_instancenameerror.html
@@ -1,31 +1,16 @@
-{% extends "base.html" %}
+{% extends "base_wizard.html" %}
 
 {% block headtags %}{% endblock %}
 
-{% block page %}
+{% block content %}
 
-<div class="block">
+<p><b>Erro, infelizmente não foi possível recuperar a base de dados. </p></b>
+<p>{{error}}</p>
 
-	<div class="block_head">
-		<div class="bheadl"></div>
-		<div class="bheadr"></div>
-		<h2>{{title}}</h2>
-	</div>		<!-- .block_head ends -->
+<form action="/recovery/select_source" method="get">
+	<input type="submit" class="submit" value="Reiniciar" />
+</form>
 
-    <div class="block_content">
-        
-        <p><b>Erro, infelizmente não foi possível recuperar a base de dados. </p></b>
-        <p>{{error}}</p>
-
-        <form action="/recovery/start" method="get">
-            <input type="submit" class="submit" value="OK" />
-        </form>
-        
-        <p></p>
-    </div>
-    <div class="bendl"></div>
-	<div class="bendr"></div>
-    
-</div>
+<p></p>
 
 {% endblock %}
