--- a/nimbus/recovery/templates/recovery_mounterror.html
+++ b/nimbus/recovery/templates/recovery_mounterror.html
@@ -1,37 +1,22 @@
-{% extends "base.html" %}
+{% extends "base_wizard.html" %}
 
 {% block headtags %}{% endblock %}
 
-{% block page %}
+{% block content %}
 
-<div class="block">
+<p><b> Não é possível montar o dispositivo {{device}}. Por favor, verifique se o dispositivo não está corrompido. </b></p>
+<p> O erro encontrado foi : <b>{{error}} </b> </p>
 
-	<div class="block_head">
-		<div class="bheadl"></div>
-		<div class="bheadr"></div>
-		<h2>{{title}}</h2>
-	</div>		<!-- .block_head ends -->
+<form action="/recovery/select_storage/" method="post">
+	<input type="hidden" name="localsource" value="True"/>
+	<input type="hidden" name="device" value="{{ device }}"/>
+	<input type="submit" class="submit long" value="Selecionar outro dispositivo" />
+</form>
 
-    <div class="block_content">
-        
-        <p><b> Não é possível montar o dispositivo {{device}}. Por favor, verifique se o dispositivo não está corrompido. </b></p>
-        <p> O erro encontrado foi : <b>{{error}} </b> </p>
+<form action="/recovery/start/" method="get">
+	<input type="submit" class="submit mid" value="Desistir" />
+</form>
 
-        <form action="/recovery/select_storage/" method="post">
-            <input type="hidden" name="localsource" value="True"/>
-            <input type="hidden" name="device" value="{{ device }}"/>
-            <input type="submit" class="submit long" value="Selecionar outro dispositivo" />
-        </form>
-
-        <form action="/recovery/start/" method="get">
-            <input type="submit" class="submit mid" value="Desistir" />
-        </form>
-        
-        <p></p>
-    </div>
-    <div class="bendl"></div>
-	<div class="bendr"></div>
-    
-</div>
+<p></p>
 
 {% endblock %}
