Adaptei o template das telas finais da recuperacao do sistema para o modelo do wizard

--- a/nimbus/recovery/templates/recovery_list_downloads.html
+++ b/nimbus/recovery/templates/recovery_list_downloads.html
@@ -1,30 +1,15 @@
-{% extends "base.html" %}
+{% extends "base_wizard.html" %}
 
 {% block headtags %}{% endblock %}
 
-{% block page %}
+{% block content %}
 
-<div class="block">
+<p><b>Atenção, quando todos os downloads tiverem concluído aperte no botão "Concluir".</b></p>
 
-	<div class="block_head">
-		<div class="bheadl"></div>
-		<div class="bheadr"></div>
-		<h2>{{title}}</h2>
-	</div>		<!-- .block_head ends -->
+<form action="/recovery/finish/" method="get">
+	<input type="submit" value="Concluir" class="submit mid" />
+</form>
 
-    <div class="block_content">
-        
-        <p><b>Atenção, quando todos os downloads tiverem concluído aperte no botão "Concluir".</b></p>
-
-        <form action="/recovery/finish/" method="get">
-            <input type="submit" value="Concluir" class="submit mid" />
-        </form>
-        
-        <p></p>
-    </div>
-    <div class="bendl"></div>
-	<div class="bendr"></div>
-    
-</div>
+<p></p>
 
 {% endblock %}
