--- a/nimbus/recovery/templates/change_instance_name.html
+++ b/nimbus/recovery/templates/change_instance_name.html
@@ -1,32 +1,19 @@
-{% extends "base.html" %}
+{% extends "base_wizard.html" %}
 
 {% block headtags %}{% endblock %}
 
-{% block page %}
+{% block content %}
 
-<div class="block">
+<p>Nome da instância alterado com sucesso. Por favor, clique em continuar.</p>
 
-	<div class="block_head">
-		<div class="bheadl"></div>
-		<div class="bheadr"></div>
-		<h2>{{title}}</h2>
-	</div>		<!-- .block_head ends -->
+<form action="/recoery/recover_dabatases/" method="post">
+	<input type="hidden" name="localsource" value="{{ localsource }}"/>
+	<input type="hidden" name="device" value="{{ device }}"/>
+	<input type="submit" class="submit" value="OK" />
+</form>
 
-    <div class="block_content">
-        
-        <p>Nome da instância alterado com sucesso. Por favor, clique em continuar.</p>
+<p></p>
 
-        <form action="/recoery/recover_dabatases/" method="post">
-            <input type="hidden" name="localsource" value="{{ localsource }}"/>
-            <input type="hidden" name="device" value="{{ device }}"/>
-            <input type="submit" class="submit" value="OK" />
-        </form>
-        
-        <p></p>
-    </div>
-    <div class="bendl"></div>
-	<div class="bendr"></div>
-    
 </div>
 
 {% endblock %}
