--- a/nimbus/recovery/templates/recovery_confirm_storage.html
+++ b/nimbus/recovery/templates/recovery_confirm_storage.html
@@ -1,33 +1,18 @@
-{% extends "base.html" %}
+{% extends "base_wizard.html" %}
 
 {% block headtags %}{% endblock %}
 
-{% block page %}
+{% block content %}
 
-<div class="block">
+<p>Dispositivo selecionado com sucesso. Por favor, clique em continuar.</p>
 
-	<div class="block_head">
-		<div class="bheadl"></div>
-		<div class="bheadr"></div>
-		<h2>{{title}}</h2>
-	</div>		<!-- .block_head ends -->
+<form action="/recovery/recover_databases/" method="post">
+	<input type="hidden" name="localsource" value="{{ localsource }}"/>
+	<input type="hidden" name="device" value="{{ device }}"/>
 
-    <div class="block_content">
-        
-        <p>Dispositivo selecionado com sucesso. Por favor, clique em continuar.</p>
+	<input type="submit" class="submit mid" value="Continuar" />
+</form>
 
-        <form action="/recovery/recover_databases/" method="post">
-            <input type="hidden" name="localsource" value="{{ localsource }}"/>
-            <input type="hidden" name="device" value="{{ device }}"/>
-            
-            <input type="submit" class="submit mid" value="Continuar" />
-        </form>
-        
-        <p></p>
-    </div>
-    <div class="bendl"></div>
-	<div class="bendr"></div>
-    
-</div>
+<p></p>
 
 {% endblock %}
