--- a/nimbus/recovery/templates/recovery_finish.html
+++ b/nimbus/recovery/templates/recovery_finish.html
@@ -1,29 +1,15 @@
-{% extends "base.html" %}
+{% extends "base_wizard.html" %}
 
 {% block headtags %}{% endblock %}
 
-{% block page %}
+{% block content %}
 
-<div class="block">
+<h1>Parabéns, seu servidor de backup foi recuperado com sucesso.</h1>
 
-	<div class="block_head">
-		<div class="bheadl"></div>
-		<div class="bheadr"></div>
-		<h2>{{title}}</h2>
-	</div>		<!-- .block_head ends -->
+<form action="#" method="post">
+	<input type="submit" value="Página inicial" class="submit mid" />
+</form>
 
-    <div class="block_content">
-        <h1>Parabéns, seu servidor de backup foi recuperado com sucesso.</h1>
-
-        <form action="/" method="get">
-            <input type="submit" value="Página inicial" class="submit mid" />
-        </form>
-        
-        <p></p>
-    </div>
-    <div class="bendl"></div>
-	<div class="bendr"></div>
-    
-</div>
+<p></p>
 
 {% endblock %}
