--- a/nimbus/recovery/templates/recovery_recover_volumes.html
+++ b/nimbus/recovery/templates/recovery_recover_volumes.html
@@ -1,31 +1,16 @@
-{% extends "base.html" %}
+{% extends "base_wizard.html" %}
 
 {% block headtags %}{% endblock %}
 
-{% block page %}
+{% block content %}
 
-<div class="block">
+<h1>O sistema de recuperação irá realizar o download de todos os seus dados armazenados.</h1>
+<p>Esta operação deve levar vários minutos ou horas. Clique no botão prosseguir e aguarde.</p>
 
-	<div class="block_head">
-		<div class="bheadl"></div>
-		<div class="bheadr"></div>
-		<h2>{{title}}</h2>
-	</div>		<!-- .block_head ends -->
+<form action="/recovery/recover_volumes/" method="post">
+	<input type="submit" class="submit mid" value="Prosseguir" />
+</form>
 
-    <div class="block_content">
-        
-        <h1>O sistema de recuperação irá realizar o download de todos os seus dados armazenados.</h1>
-        <p>Esta operação deve levar vários minutos ou horas. Clique no botão prosseguir e aguarde.</p>
-
-        <form action="/recovery/recover_volumes/" method="post">
-            <input type="submit" class="submit mid" value="Prosseguir" />
-        </form>
-        
-        <p></p>
-    </div>
-    <div class="bendl"></div>
-	<div class="bendr"></div>
-    
-</div>
+<p></p>
 
 {% endblock %}
