--- a/nimbus/recovery/templates/recovery_start.html
+++ b/nimbus/recovery/templates/recovery_start.html
@@ -1,32 +1,17 @@
-{% extends "base.html" %}
+{% extends "base_wizard.html" %}
 
 {% block headtags %}{% endblock %}
 
-{% block page %}
+{% block content %}
 
-<div class="block">
+<h2>Deseja realizar a recuperação do servidor?</h2>
 
-	<div class="block_head">
-		<div class="bheadl"></div>
-		<div class="bheadr"></div>
-		<h2>{{title}}</h2>
-	</div>		<!-- .block_head ends -->
+<p> Atenção, é importante que o nome da instância atual seja igual a anteriormente instalada na máquina para que os arquivos pertencentes a esta máquina possam ser identificados.</p>
 
-    <div class="block_content">
-    
-        <h2>Deseja realizar a recuperação do servidor?</h2>
+<form action="/recovery/select_source" method="get">
+	<input type="submit" class="submit mid" value="Prosseguir" />
+</form>
 
-        <p> Atenção, é importante que o nome da instância atual seja igual a anteriormente instalada na máquina para que os arquivos pertencentes a esta máquina possam ser identificados.</p>
-        
-        <form action="/recovery/select_source" method="get">
-            <input type="submit" class="submit mid" value="Prosseguir" />
-        </form>
-    
-        <p></p>
-    </div>
-    <div class="bendl"></div>
-	<div class="bendr"></div>
-    
-</div>
+<p></p>
 
 {% endblock %}
