FIX: Nome do primeiro grafico para dados

--- a/nimbus/base/templates/home.html
+++ b/nimbus/base/templates/home.html
@@ -13,7 +13,7 @@
     			<h2>Backups</h2>
 
                 <ul class="tabs">
-                    <li><a href="#backup-bytes">Mega bytes</a></li>
+                    <li><a href="#backup-bytes">Dados</a></li>
                     <li><a href="#backup-files">Quantidade de Arquivos</a></li>
                 </ul>
             </div>		<!-- .block_head ends -->
