Adicionando labels aos graáficos da home

--- a/nimbus/base/templates/base.html
+++ b/nimbus/base/templates/base.html
@@ -35,9 +35,10 @@
     <script language="javascript" type="text/javascript" src="/media/lib/js/jqplotplugins/jqplot.pointLabels.js"></script>
     
     <script type="text/javascript" charset="utf-8">
-        function create_chart(obj_id, data, ticks, chart_type) {
+        function create_chart(obj_id, data, ticks, chart_type, labels) {
             var fill = false;
             var render = $.jqplot.PieRenderer;
+            console.log(labels);
             
             if (chart_type == 'bar') {
                 var render = $.jqplot.BarRenderer;
@@ -49,13 +50,13 @@
 			$.jqplot(obj_id, [data], {
                 seriesDefaults: {
                     renderer: render,
-                    pointLabels: { location:'s', show: true },
+                    pointLabels: { location:'s', show: true, labels: labels },
                     fill: true,
 					color: '#95BACB'
                 },
 				axesDefaults: {
 					tickOptions: {
-						formatString: "%.2f"
+						//formatString: "%.2f"
 					}
 				},
                 axes: {
@@ -79,11 +80,12 @@
                 data = $.map(data, function(e){
                     return parseFloat(e);
                 });
+                var labels = $(this).children().filter('chartlabels').text().split(',');
                 var header = $(this).children().filter('chartheader').text().split(',');
                 var chart_type = $(this).attr('charttype');
                 $(this).text('');
                 
-                create_chart(chart_id, data, header, chart_type);
+                create_chart(chart_id, data, header, chart_type, labels);
             });
         });
     </script>
