--- a/nimbus/base/templates/base_wizard.html
+++ b/nimbus/base/templates/base_wizard.html
@@ -5,9 +5,9 @@
 <head>
 
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	
+
 	<title>{% block title %}{% endblock %} Nimbus</title>
-	
+
     <style type="text/css" media="all">
 		@import url("/media/lib/css/style.css");
 		@import url("/media/lib/css/jquery.wysiwyg.css");
@@ -16,10 +16,10 @@
 		@import url("/media/lib/css/date_input.css");
 		@import url("/media/js/iphone-style-checkboxes/style.css");
 		@import url("/media/js/progressbar/jquery.ui.all.css");
-		
+
 		#id_country { width: 400px; }
 		#id_area { width: 300px; }
-		
+
 		#license-box {
 			font-size: 11px;
 			border: 1px solid #CCC;
@@ -28,16 +28,16 @@
 			overflow-y: scroll;
 			padding: 10px;
 		}
-		
+
 		.block.small.center.wide {
 			width: 800px;
 		}
     </style>
-	
+
 	<!--[if IE]><meta http-equiv="X-UA-Compatible" content="IE=7" /><![endif]-->
 	<!--[if lt IE 8]><style type="text/css" media="all">@import url("css/ie.css");</style><![endif]-->
 	<!--[if IE]><script type="text/javascript" src="js/excanvas.js"></script><![endif]-->
-	
+
 	<script type="text/javascript" src="/media/lib/js/jquery.js"></script>
 	<script type="text/javascript" src="/media/lib/js/jquery.img.preload.js"></script>
 	<script type="text/javascript" src="/media/lib/js/jquery.filestyle.mini.js"></script>
@@ -48,11 +48,11 @@
 	<script type="text/javascript" src="/media/lib/js/jquery.select_skin.js"></script>
 	<script type="text/javascript" src="/media/lib/js/ajaxupload.js"></script>
 	<script type="text/javascript" src="/media/lib/js/jquery.pngfix.js"></script>
-	<script type="text/javascript" src="/media/lib/js/custom.js"></script>
+	<script type="text/javascript" src="/media/lib/js/custom_wizard.js"></script>
 	<script type="text/javascript" src="/media/js/iphone-style-checkboxes/jquery/iphone-style-checkboxes.js"></script>
 	<script src="/media/js/jquery.sparkline.min.js" type="text/javascript"></script>
 	<script src="/media/js/progressbar/jquery.ui.core.min.js" type="text/javascript" charset="utf-8"></script>
-	<script src="/media/js/progressbar/jquery.ui.widget.min.js" type="text/javascript" charset="utf-8"></script>	
+	<script src="/media/js/progressbar/jquery.ui.widget.min.js" type="text/javascript" charset="utf-8"></script>
 	<script src="/media/js/progressbar/jquery.ui.progressbar.min.js" type="text/javascript" charset="utf-8"></script>
 
     <script type="text/javascript" charset="utf-8">
@@ -61,8 +61,8 @@
 
             $(".iPhoneCheckContainer").css("width", "85px");
             $(".sparklines").sparkline('html', {width: "300", height: "150px" })
-            
-            
+
+
         });
 	</script>
 
@@ -72,25 +72,25 @@
 
 
 <body>
-	
+
 	<div id="hld">
-	
+
 		<div class="wrapper">		<!-- wrapper begins -->
-			
+
 		    <div class="logo_center"><img src="/media/images/nimbus_logo.png" /></div>
-			
+
 			<div class="block small center login {{wide}}">
-			
+
 				<div class="block_head">
 					<div class="bheadl"></div>
 					<div class="bheadr"></div>
-					
+
 					<h2>{{wizard_title}}</h2>
 				</div>		<!-- .block_head ends -->
-				
-				
+
+
 				<div class="block_content">
-					
+
 					{% if messages %}
                         <div class="message info">
                             {% for msg in messages %}
@@ -98,26 +98,26 @@
                             {% endfor %}
                         </div>
                     {% endif %}
-                    
-                    
+
+
                     {%block content%}
                     {%endblock%}
 
                     {%block page%}
                     {%endblock%}
-					
+
 				</div>		<!-- .block_content ends -->
-					
+
 				<div class="bendl"></div>
 				<div class="bendr"></div>
-								
+
 			</div>		<!-- .login ends -->
 
-		
-		
+
+
 		</div>						<!-- wrapper ends -->
-		
+
 	</div>		<!-- #hld ends -->
-	
+
 </body>
 </html>
