Eliminando uma etapa da recuperacao do sistema

--- a/nimbus/recovery/templates/recovery_select_source.html
+++ b/nimbus/recovery/templates/recovery_select_source.html
@@ -9,8 +9,9 @@
 <form action="/recovery/select_source/" method="post">
   <input type="radio" name="source" value="offsite" /> Nimbus Cloud Backup <br />
   <input type="radio" name="source" value="externalstorage" /> HD externo <br /> <br />
-  <input class="submit mid" type="submit" value="Prosseguir" /><br />
+  <p class="input_submit">
+  <input class="submit right mid" type="submit" value="Prosseguir" />
+  </p>
 </form>
-<p></p>
 
 {% endblock %}
