--- a/nimbus/recovery/templates/recovery_select_storage.html
+++ b/nimbus/recovery/templates/recovery_select_storage.html
@@ -18,10 +18,10 @@
 	<br />
 	<input type="hidden" name="localsource" value="True"/>
 
-	<input type="submit" class="submit mid" value="Prosseguir" />
+	<p class="input_submit">
+	<input type="submit" class="submit right mid" value="Prosseguir" />
+	</p>
 	{%endif%}
 </form>
-
-<p></p>
 
 {% endblock %}
