--- a/nimbus/recovery/templates/recovery_database_ok.html
+++ b/nimbus/recovery/templates/recovery_database_ok.html
@@ -11,7 +11,9 @@
 <form action="/recovery/recover_volumes/" method="post">
 	<input type="hidden" name="localsource" value="{{localsource}}"/>
 	<input type="hidden" name="device" value="{{device}}"/>
-	<input type="submit" class="submit mid" value="Prosseguir" />
+	<p class="input_submit">
+	<input type="submit" class="submit right mid" value="Prosseguir" />
+	</p>
 </form>
 
 <p></p>
