--- a/nimbus/recovery/templates/recovery_recover_databases.html
+++ b/nimbus/recovery/templates/recovery_recover_databases.html
@@ -9,7 +9,9 @@
 <form action="/recovery/recover_databases/" method="post">
 	<input type="hidden" name="localsource" value="{{ localsource }}"/>
 	<input type="hidden" name="device" value="{{ device }}"/>
-	<input type="submit" class="submit" value="OK" />
+	<p class="input_submit">
+		<input type="submit" class="submit right" value="OK" />
+	</p>
 </form>
 
 <p></p>
