Alinhamento dos botoes para a direita

--- a/nimbus/recovery/templates/change_instance_name.html
+++ b/nimbus/recovery/templates/change_instance_name.html
@@ -9,10 +9,10 @@
 <form action="/recoery/recover_dabatases/" method="post">
 	<input type="hidden" name="localsource" value="{{ localsource }}"/>
 	<input type="hidden" name="device" value="{{ device }}"/>
-	<input type="submit" class="submit" value="OK" />
+	<p class="input_submit">
+		<input type="submit" class="submit right" value="OK" />
+	</p>
 </form>
-
-<p></p>
 
 </div>
 
