--- a/nimbus/recovery/templates/recovery_instancenameerror.html
+++ b/nimbus/recovery/templates/recovery_instancenameerror.html
@@ -8,9 +8,9 @@
 <p>{{error}}</p>
 
 <form action="/recovery/select_source" method="get">
-	<input type="submit" class="submit" value="Reiniciar" />
+	<p class="input_submit">
+	<input type="submit" class="submit right" value="Reiniciar" />
+	</p>
 </form>
-
-<p></p>
 
 {% endblock %}
