--- a/nimbus/recovery/templates/recovery_list_downloads.html
+++ b/nimbus/recovery/templates/recovery_list_downloads.html
@@ -7,9 +7,9 @@
 <p><b>Atenção, quando todos os downloads tiverem concluído aperte no botão "Concluir".</b></p>
 
 <form action="/recovery/finish/" method="get">
-	<input type="submit" value="Concluir" class="submit mid" />
+	<p class="input_submit">
+		<input type="submit" value="Concluir" class="submit right mid" />
+	</p>
 </form>
-
-<p></p>
 
 {% endblock %}
