--- a/nimbus/recovery/templates/recovery_mounterror.html
+++ b/nimbus/recovery/templates/recovery_mounterror.html
@@ -14,9 +14,9 @@
 </form>
 
 <form action="/recovery/start/" method="get">
-	<input type="submit" class="submit mid" value="Desistir" />
+	<p class="input_submit">
+	<input type="submit" class="submit right mid" value="Desistir" />
+	</p>
 </form>
-
-<p></p>
 
 {% endblock %}
