--- a/nimbus/recovery/templates/recovery_recover_volumes.html
+++ b/nimbus/recovery/templates/recovery_recover_volumes.html
@@ -8,9 +8,9 @@
 <p>Esta operação deve levar vários minutos ou horas. Clique no botão prosseguir e aguarde.</p>
 
 <form action="/recovery/recover_volumes/" method="post">
-	<input type="submit" class="submit mid" value="Prosseguir" />
+	<p class="input_submit">
+		<input type="submit" class="submit right mid" value="Prosseguir" />
+	</p>
 </form>
-
-<p></p>
 
 {% endblock %}
