--- a/nimbus/recovery/templates/recovery_select_instance_name.html
+++ b/nimbus/recovery/templates/recovery_select_instance_name.html
@@ -13,8 +13,8 @@
   {%endfor%}
   <input type="hidden" name="localsource" value="{{ localsource }}"/>
   <input type="hidden" name="device" value="{{ device }}"/>
-  <input type="submit" class="submit" value="OK" />
-
-<p></p>
+  <p class="input_submit">
+	<input type="submit" class="submit right" value="OK" />
+  </p>
 
 {% endblock %}
