--- a/nimbus/recovery/templates/recovery_confirm_storage.html
+++ b/nimbus/recovery/templates/recovery_confirm_storage.html
@@ -9,10 +9,9 @@
 <form action="/recovery/recover_databases/" method="post">
 	<input type="hidden" name="localsource" value="{{ localsource }}"/>
 	<input type="hidden" name="device" value="{{ device }}"/>
-
-	<input type="submit" class="submit mid" value="Continuar" />
+	<p class="input_submit">
+		<input type="submit" class="submit right mid" value="Continuar" />
+	</p>
 </form>
-
-<p></p>
 
 {% endblock %}
