--- a/nimbus/recovery/templates/recovery_finish.html
+++ b/nimbus/recovery/templates/recovery_finish.html
@@ -7,9 +7,9 @@
 <h1>Parabéns, seu servidor de backup foi recuperado com sucesso.</h1>
 
 <form action="#" method="post">
-	<input type="submit" value="Página inicial" class="submit mid" />
+	<p class="input_submit">
+	<input type="submit" value="Página inicial" class="submit right mid" />
+	</p>
 </form>
-
-<p></p>
 
 {% endblock %}
