--- a/nimbus/base/templates/form.html
+++ b/nimbus/base/templates/form.html
@@ -1,8 +1,11 @@
 {{ form.non_field_errors }}
-{% for field in form %}
+{% for field in form.visible_fields %}
   {% csrf_token %} 
   {{ field.errors }}
 <p>
     {{ field.label_tag }}<br/>{{ field }}
 </p>
+{% endfor %}
+{% for hidden in form.hidden_fields %}
+  {{ hidden }}
 {% endfor %}
