--- a/nimbus/recovery/templates/recovery_select_source.html
+++ b/nimbus/recovery/templates/recovery_select_source.html
@@ -7,7 +7,7 @@
     <h2>Selecione a origem de onde deseja fazer a recuperação:</h2>
 
 <form action="/recovery/select_source/" method="post">
-  <input type="radio" name="source" value="offsite" /> Nimbus Cloud Backup <br />
+  <input type="radio" name="source" value="offsite" checked="checked"/> Nimbus Cloud Backup <br />
   <input type="radio" name="source" value="externalstorage" /> HD externo <br /> <br />
   <p class="input_submit">
 	<input class="submit right mid" type="submit" value="Prosseguir" />
