--- a/nimbus/recovery/templates/recovery_recover_databases.html
+++ b/nimbus/recovery/templates/recovery_recover_databases.html
@@ -7,7 +7,7 @@
 	function check(){
 		$.post('/recovery/check_database_recover/', {}, function(json){
 			//json.count = 0;
-			if (! json.count) {
+			if (! json.has_finished) {
 				$("#recover_database").submit();
 			}
 			$("#files_left span").text(json.count);
