--- a/nimbus/base/templates/home.html
+++ b/nimbus/base/templates/home.html
@@ -8,27 +8,28 @@
 <script type="text/javascript" src="/media/lib/js/jqplotplugins/jqplot.barRenderer.js"></script>
 <script type="text/javascript" src="/media/lib/js/jqplotplugins/jqplot.pieRenderer.js"></script>
 <script type="text/javascript" src="/media/lib/js/jqplotplugins/jqplot.categoryAxisRenderer.js"></script>
-<script type="text/javascript" src="/media/lib/js/jqplotplugins/jqplot.highlighter.js"></script>
+<script type="text/javascript" src="/media/lib/js/jqplotplugins/jqplot.highlighter.min.js"></script>
 <script type="text/javascript" src="/media/lib/js/jqplotplugins/jqplot.pointLabels.js"></script>
+<script type="text/javascript" src="/media/lib/js/jqplotplugins/jqplot.cursor.min.js"></script>
 <script type="text/javascript" src="/media/js/home.js"></script>
 {% endblock %}
 
 {% block content %}
 
     	<div class="block">
-	
+
     		<div class="block_head">
     			<div class="bheadl"></div>
     			<div class="bheadr"></div>
-			
+
     			<h2>Backups</h2>
 
                 <ul class="tabs">
-                    <li><a href="#backup-bytes">Dados</a></li>
+                    <li><a href="#backup-bytes">Mega bytes</a></li>
                     <li><a href="#backup-files">Quantidade de Arquivos</a></li>
                 </ul>
             </div>		<!-- .block_head ends -->
-		    
+
 		    <div class="block_content tab_content" id="backup-bytes">
 		        {% with table1 as table %}
 			        {% include "table_chart.html" %}
@@ -39,23 +40,23 @@
 			        {% include "table_chart.html" %}
 			    {% endwith %}
     		</div>		<!-- .block_content ends -->
-	
 
-	
+
+
     		<div class="bendl"></div>
     		<div class="bendr"></div>
     	</div>		<!-- .block ends -->
-	
+
 
 	    <div class="block">
-	
+
     		<div class="block_head">
     			<div class="bheadl"></div>
     			<div class="bheadr"></div>
-			
+
     			<h2>Sistema e servidor</h2>
     		</div>		<!-- .block_head ends -->
-		
+
     		<div class="block_content">
                 <div class="left">
                     <h4>Uso da Memória</h4>
@@ -78,29 +79,29 @@
     			        {% include "table_chart.html" %}
     			    {% endwith %}
                 </div>
-                
+
        		    <div class="clear"></div>
     		    <p></p>
-		
+
     		</div>		<!-- .block_content ends -->
-		
+
     		<div class="bendl"></div>
     		<div class="bendr"></div>
     	</div>		<!-- .block ends -->
-	
-	
-    
-        
+
+
+
+
         <div class="block">
-	
+
     		<div class="block_head">
     			<div class="bheadl"></div>
     			<div class="bheadr"></div>
-			
+
     			<h2>Procedimentos</h2>
-			
+
     		</div>		<!-- .block_head ends -->
-		
+
             <div class="block_content">
 		    {% with backups_com_falhas as item %}
     		    <div class="stat_block">
@@ -108,13 +109,13 @@
                 </div>
     		{% endwith %}
     		</div>
-		
+
     		<div class="bendl"></div>
     		<div class="bendr"></div>
     	</div>		<!-- .block ends -->
-	
-	
-	    
+
+
+
 
 
 
