--- a/nimbus/backup/templates/backup_create.html
+++ b/nimbus/backup/templates/backup_create.html
@@ -3,6 +3,7 @@
 {% block headtags %}
 <link type="text/css" rel="stylesheet" href="/media/css/backup.css"/>
 <link rel="stylesheet" type="text/css" href="/media/css/schedules.css" />
+
 <script type="text/javascript" src="/media/lib/js/tree_plugin.js"></script>
 <script type="text/javascript" src="/media/js/backup.js"></script>
 <script type="text/javascript" src="/media/js/schedules.js"></script>
@@ -21,6 +22,7 @@
     <div class="block_content">
         
         <form action="/backup/add/" method="post">
+            {{ form.non_field_errors }}
             {% if computer %}
             <p></p>
             <div class="computer">
@@ -46,7 +48,7 @@
             {% endif %}
             <p>
                 <label>Nome para o procedimento de backup:</label><br/>
-                <input type="text" class="text small" name="procedure_name" value="{{procedure_name}}" />
+                    <input type="text" class="text small" name="procedure_name" value="{{procedure_name}}" />
             </p>
             
             {% if not computer %}
@@ -59,6 +61,7 @@
                 <label for="computer_id">Computador que será efetuado o backup:</label><br/>
                 <select class="styled" id="computer_id" name="computer_id">
                     <option value=""> - Selecione - </option>
+                    <option value="add"> - Adicionar computador - </option>
                     {% for computer in computers %}
                     <option value="{{computer.id}}" {% if computer_id == computer.id %}selected="selected"{% endif %}>{{computer.name}}</option>
                     {% endfor %}
@@ -196,10 +199,14 @@
                             <div class="personal_message"><p>Executa o backup em determinados dias do mês, sempre no horário especificado.</p></div>
                             <p>
                                 <label>Dias do mês:</label><br/>
+                                <table border="0" cellpadding="0" cellspacing="0">
+                                <tbody>
                                 {% for day in days %}
                                 <input type="checkbox" id="day_{{day}}" name="schedule.monthly.day" value="{{day}}" {% if day in schedule_monthly_day %}checked="checked"{% endif %} />
                                 <label for="day_{{day}}">{{day}}º</label>
                                 {% endfor %}
+                                </tbody>
+                                </table>
                             </p>
                             <p>
                                 <label for="mothly_hour">Hora:</label><br/>
