--- a/nimbus/backup/templates/schedule_new.html
+++ b/nimbus/backup/templates/schedule_new.html
@@ -122,8 +122,8 @@ label{display: block;}
                 <small>Exemplo: 10:20, 21:35 ou 07:08.</small>
             </p>
             <p>
-                <label>{{ formset.month.type.label }}:</label>
-                {{ formset.month.type }}<br />
+                <label>{{ formset.month.level.label }}:</label>
+                {{ formset.month.level }}<br />
                 <small>No backup full é feita uma cópia completa de todos os arquivos "marcados" para backup. No incremental é feita uma cópia apenas das modificações. É importamente sempre manter uma política mista de backups.</small>
             </p>
             <p>
@@ -157,8 +157,8 @@ label{display: block;}
                 <small>Exemplo: 10:20, 21:35 ou 07:08.</small>
             </p>
             <p>
-                <label>{{ formset.week.type.label }}:</label>
-                {{ formset.week.type }}<br />
+                <label>{{ formset.week.level.label }}:</label>
+                {{ formset.week.level }}<br />
                 <small>No backup full é feita uma cópia completa de todos os arquivos "marcados" para backup. No incremental é feita uma cópia apenas das modificações. É importamente sempre manter uma política mista de backups.</small>
             </p>
             <p>
@@ -177,8 +177,8 @@ label{display: block;}
                 <small>Exemplo: 10:20, 21:35 ou 07:08.</small>
             </p>
             <p>
-                <label>{{ formset.day.type.label }}:</label>
-                {{ formset.day.type }}<br />
+                <label>{{ formset.day.level.label }}:</label>
+                {{ formset.day.level }}<br />
                 <small>No backup full é feita uma cópia completa de todos os arquivos "marcados" para backup. No incremental é feita uma cópia apenas das modificações. É importamente sempre manter uma política mista de backups.</small>
             </p>
             <p>
@@ -197,8 +197,8 @@ label{display: block;}
                 <small>Exemplo: 20, 35 ou 08.</small>
             </p>
             <p>
-                <label>{{ formset.hour.type.label }}:</label>
-                {{ formset.hour.type }}<br />
+                <label>{{ formset.hour.level.label }}:</label>
+                {{ formset.hour.level }}<br />
                 <small>No backup full é feita uma cópia completa de todos os arquivos "marcados" para backup. No incremental é feita uma cópia apenas das modificações. É importamente sempre manter uma política mista de backups.</small>
             </p>
             <p>
